--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="google-site-verification" content="Ni9gvT2f50SrFTudhghjtxmkP6Qfv6aVdI5SP4LaJTU" />
     <title>Inzamul Hoque - Portfolio</title>
   </head>
   <body>
