removed backend code, enhanced frontend

--- a/index.html
+++ b/index.html
@@ -1,54 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    
-    <!-- SEO Meta Tags -->
-    <title>Inzamul Hoque - Full Stack Developer & ML Enthusiast</title>
-    <meta name="description" content="Inzamul Hoque's portfolio showcasing full-stack web development, ML integrations, and innovative tech solutions." />
-    <meta name="keywords" content="Inzamul Hoque, Full Stack Developer, Machine Learning, Web Development, AI, Portfolio" />
-    <meta name="author" content="Inzamul Hoque" />
-    <link rel="canonical" href="https://inzam.xyz" />
-
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://inzam.xyz" />
-    <meta property="og:title" content="Inzamul Hoque - Full Stack Developer & ML Enthusiast" />
-    <meta property="og:description" content="Explore my portfolio showcasing expertise in full-stack development, AI, and machine learning-driven solutions." />
-    <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D4D03AQH_y2YKaFiYeg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1697993704738?e=1744848000&v=beta&t=DB8nhybnN_KdS3qD7JvFKTols2vWV7pLUMRekQJjfZU" />
-
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://inzam.xyz" />
-    <meta name="twitter:title" content="Inzamul Hoque - Full Stack Developer & ML Enthusiast" />
-    <meta name="twitter:description" content="Explore my portfolio showcasing expertise in full-stack development, AI, and machine learning-driven solutions." />
-    <meta name="twitter:image" content="https://media.licdn.com/dms/image/v2/D4D03AQH_y2YKaFiYeg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1697993704738?e=1744848000&v=beta&t=DB8nhybnN_KdS3qD7JvFKTols2vWV7pLUMRekQJjfZU" />
-
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="Ni9gvT2f50SrFTudhghjtxmkP6Qfv6aVdI5SP4LaJTU" />
-
-    <!-- Favicon & Apple Touch Icons -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-
-    <!-- Structured Data for SEO (JSON-LD) -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "Inzamul Hoque",
-      "url": "https://inzam.xyz",
-      "sameAs": [
-        "https://github.com/inzamrzn918",
-        "https://linkedin.com/in/inzamol",
-        "https://x.com/inzamol"
-      ],
-      "jobTitle": "Full Stack Developer & ML Enthusiast & Backend Developer",
-      "description": "A passionate full-stack developer and ML enthusiast building scalable web solutions.",
-      "image": "https://media.licdn.com/dms/image/v2/D4D03AQH_y2YKaFiYeg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1697993704738?e=1744848000&v=beta&t=DB8nhybnN_KdS3qD7JvFKTols2vWV7pLUMRekQJjfZU"
-    }
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inzamul Hoque - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
